--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INDIAN ODESSY</title>
+    <title> INDIAN ODESSY</title>
 </head>
-<body>
-    <h1> INDIAN ODESSY</h1>
-    <img src="https://imgs.search.brave.com/UiOqtmMVmuFXcbomfxpZJ04hLX_3Ju_QhQLyEeSN894/rs:fit:860:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzAwLzI1LzQ4LzUx/LzM2MF9GXzI1NDg1/MTc2X3l2NlNxUE12/SzVHbHRkNkE1QVZJ/S2ZiQldHR1VZNkZO/LmpwZw" alt="image of india">
+<body><header> 
+        <b><i> <pre><h1>                        INDIAN ODESSY</h1></pre></i></b><hr></header>
+
    <br>
-    <a href="https://www.google.co.in/maps/place/India/@21.0686228,82.7525294,4z/data=!3m1!4b1!4m6!3m5!1s0x30635ff06b92b791:0xd78c4fa1854213a6!8m2!3d20.593684!4d78.96288!16zL20vMDNyazA?entry=ttu">MAP OF INDIA</a>
+    <a href="https://www.google.co.in/maps/place/India/@21.0686228,82.7525294,4z/data=!3m1!4b1!4m6!3m5!1s0x30635ff06b92b791:0xd78c4fa1854213a6!8m2!3d20.593684!4d78.96288!16zL20vMDNyazA?entry=ttu"target="_main"><img src="https://imgs.search.brave.com/UiOqtmMVmuFXcbomfxpZJ04hLX_3Ju_QhQLyEeSN894/rs:fit:860:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzAwLzI1LzQ4LzUx/LzM2MF9GXzI1NDg1/MTc2X3l2NlNxUE12/SzVHbHRkNkE1QVZJ/S2ZiQldHR1VZNkZO/LmpwZw" alt="image of india"height="500"></a><hr>
+
+<per><h2><u>states in india</u></h2></per>
+<ol>
+    <li><a href="https://www.mapsofindia.com/maps/orissa/"target="_main">ODISHA</a><Ol>
+        list of districts 
+        <li>ganjam</li>
+        <li>sambalpur</li>
+    </Ol> </li>
+    <li><a href="https://www.mapsofindia.com/maps/rajasthan/"target="_main">RAJASTHAN</a> </li>
+</ol>
+
+
+<footer>our contact info- 8917566897(subham)</footer>
 </body>
 </html>
